[tool.poetry]
name = "cipher_jat2167_2"
version = "0.2.0"
description = "A cipher function which encodes a string based on shifting the letters across n positions in the alphabet."
authors = ["Julia Tache <jat2167@columbia.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/QMSS-G5072-2020/cipher_Tache_Julia"
repository = "https://github.com/QMSS-G5072-2020/cipher_Tache_Julia"
documentation = 'https://cipher_Tache_Julia.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
codecov = "^2.1.10"
python-semantic-release = "^7.3.0"
flake8 = "^3.8.4"
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

